--- a/dotfiles/.config/starship.toml
+++ b/dotfiles/.config/starship.toml
@@ -12,14 +12,15 @@ error_symbol = ''
 # ---
 
 [os]
-format = '[$symbol](bold white) '   
+#format = '[$symbol](bold white) '   
 disabled = false
 
 [os.symbols]
-Windows = ' '
-Arch = '󰣇'
-Ubuntu = ''
-Macos = '󰀵'
+Windows = '  '
+Ubuntu = ' '
+Debian = " "
+Linux = " "
+Macos = '󰀵 '
 
 # ---y
 
