--- a/pi-hole/Pihole.yml
+++ b/pi-hole/Pihole.yml
@@ -5,6 +5,7 @@ services:
   pihole:
     container_name: pihole
     image: pihole/pihole:latest
+    restart: unless-stopped
     networks:
       rwdmacvlan:
         ipv4_address: 192.168.50.41
@@ -15,13 +16,12 @@ services:
     volumes:
       - CHANGE_TO_COMPOSE_DATA_PATH/pi-hole/etc-pihole:/etc/pihole
       - CHANGE_TO_COMPOSE_DATA_PATH/pi-hole/etc-dnsmasq.d:/etc/dnsmasq.d  
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.pihole.rule=Host(`pihole.local.rwdevs.com`)
-      - traefik.http.routers.pihole.tls=true
-      - traefik.http.routers.pihole.entrypoints=websecure
-      - traefik.http.services.pihole.loadbalancer.server.port=80
-    restart: unless-stopped
+    #labels:
+      #- traefik.enable=true
+      #- traefik.http.routers.pihole.rule=Host(`pihole.local.rwdevs.com`)
+      #- traefik.http.routers.pihole.tls=true
+      #- traefik.http.routers.pihole.entrypoints=websecure
+      #- traefik.http.services.pihole.loadbalancer.server.port=80
 networks:
   rwdmacvlan:
     external: true
