--- a/syncthing/docker-compose.yaml
+++ b/syncthing/docker-compose.yaml
@@ -1,1 +1,17 @@
----
+--- 
+services:
+  syncthing:
+    image: syncthing/syncthing
+    container_name: syncthing
+    hostname: syncthing-omv
+    environment:
+      - PUID=1000
+      - PGID=1000
+    volumes:
+      - CHANGE_TO_COMPOSE_DATA_PATH/syncthing:/var/syncthing
+    ports:
+      - 8384:8384 # Web UI
+      - 22000:22000/tcp # TCP file transfers
+      - 22000:22000/udp # QUIC file transfers
+      - 21027:21027/udp # Receive local discovery broadcasts
+    restart: unless-stopped
