--- a/homepage/config/docker-compose.yaml
+++ b/homepage/config/docker-compose.yaml
@@ -1,1 +1,35 @@
 ---
+#https://gethomepage.dev/installation/docker/
+
+services:
+  homepage:
+    image: ghcr.io/gethomepage/homepage:latest
+    container_name: homepage
+    restart: unless-stopped
+    ports:
+      - 3000:3000
+    env_file: homepage.env 
+    volumes:
+      - CHANGE_TO_COMPOSE_DATA_PATH/homepage:/app/config # Make sure your local config directory exists
+      - CHANGE_TO_COMPOSE_DATA_PATH/homepage/images:/app/public/images
+      - CHANGE_TO_COMPOSE_DATA_PATH/homepage/icons:/app/public/icons
+      - /var/run/docker.sock:/var/run/docker.sock # (optional) For docker integrations
+    networks:
+      - proxy
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.homepage.entrypoints=web"
+      - "traefik.http.routers.homepage.rule=Host(`homepage.local.rwdevs.com`)"
+      - "traefik.http.middlewares.homepage-https-redirect.redirectscheme.scheme=https"
+      - "traefik.http.routers.homepage.middlewares=homepage-https-redirect"
+      - "traefik.http.routers.homepage-secure.entrypoints=websecure"
+      - "traefik.http.routers.homepage-secure.rule=Host(`homepage.local.rwdevs.com`)"
+      - "traefik.http.routers.homepage-secure.tls=true"
+      - "traefik.http.routers.homepage.tls.certresolver=cloudflare"
+      - "traefik.http.routers.homepage-secure.service=homepage"
+      - "traefik.http.services.homepage.loadbalancer.server.port=3000"
+      - "traefik.docker.network=proxy"
+
+networks:
+  proxy:
+    external: true
