updated new services to homepage

--- a/docker-compose/homepage/appdata/bookmarks.yaml
+++ b/docker-compose/homepage/appdata/bookmarks.yaml
@@ -9,6 +9,12 @@
   - Christian Lempa:
     - icon: si-github-#FFFFFF
       href: https://github.com/christianlempa
+  - Techno Tim:
+    - icon: si-github-#FFFFFF
+      href: https://github.com/timothystewart6
+  - Jim's Garage:
+    - icon: si-github-#FFFFFF
+      href: https://github.com/JamesTurland
 
 - Cloud Services:
   - Cloudflare:
