--- a/ansible/playbooks/update-apt.yml
+++ b/ansible/playbooks/update-apt.yml
@@ -1,16 +1,24 @@
 ---
-- name: Update and upgrade apt packages
-  hosts: "*"
+- hosts: all
+  gather_facts: yes
+  become: yes
 
   tasks:
-    - name: Update packages with apt
-      when: ansible_pkg_mgr == 'apt'
-      become: true
-      ansible.builtin.apt:
-        update_cache: true
-
-    - name: Upgrade packages with apt
-      when: ansible_pkg_mgr == 'apt'
-      become: true
+    - name: Perform a dist-upgrade.
       ansible.builtin.apt:
         upgrade: dist
+        update_cache: yes
+
+    - name: Check if a reboot is required.
+      ansible.builtin.stat:
+        path: /var/run/reboot-required
+        get_checksum: no
+      register: reboot_required_file
+
+    - name: Reboot the server (if required).
+      ansible.builtin.reboot:
+      when: reboot_required_file.stat.exists == true
+
+    - name: Remove dependencies that are no longer required.
+      ansible.builtin.apt:
+        autoremove: yes
